# imodel-native

./: .clang-format  .clangd  .editorconfig  .gitignore  .hgtags  BENTLEY_BUILD_SKILL.md  COPYRIGHT.md  ChangeSetManager.cpp  ChangeSetManager.h  DgnSqlFuncsForTriggers.cpp  DgnSqlFuncsForTriggers.h  GRAPH.md  IModelBank.cpp  IModelBank.h  IModelBankLoggingInterop.cpp  IModelBankNative.cpp  JsInterop.cpp  LICENSE.md  MissingStructs.cpp  MissingStructs.h  README.md  ci_build_bump_version_file.py  ci_build_call_bb.py  ci_build_capture_bat_env.py  ci_build_config.json  ci_build_prune_srcroot.py  ci_build_read_versions.py  ci_build_write_versions.py  compile_flags.txt  imodel-bank-input-libs.mki  imodel-bank.PartFile.xml  imodel-bank.mke  jsoncpp-removal-plan.md  libxml2 Removal Feasibility Report.md  makePackages.mke  makePackages.py  package-lock.json  package.json.template  package_version.txt  proposal.md
iModelCore/BeSQLite/: AppModelDb.cpp  BCVDaemon.PartFile.xml  BCVDaemon.mke  BeBlobDaemon.mke  BeBriefcaseBasedIdSequence.cpp  BeLzma.cpp  BeSQLite.PartFile.xml  BeSQLite.cmake.PartFile.xml  BeSQLite.cpp  BeSQLite.mke  BeSQLite.prewire.mke  BeSQLite.vcxproj  BeSQLite.vcxproj.filters  BeSQLiteCurlHandleConfig.cpp  BeSQLiteCustomInit.c  BeSQLiteProfileManager.cpp  BeSQLiteProfileManager.h  BlobDaemon.cpp  CMakeLists.txt  ChangeSet.cpp  ChangesetFile.cpp  CloudSqlite.cpp  CreateBuildVersionHeader.mki  IModelExtractor.PartFile.xml  ITwinDaemon.mke  L10N.cpp  MonotoneClock.cpp  NativeChangeSetReader.cpp  Profiler.cpp  README.md  RevisionChangesFile.cpp  SearchableText.cpp  SqliteLib.mke  SqliteShell.mke  VirtualTab.cpp
iModelCore/BeSQLite/Crypt/: md5.cpp  sha1.cpp
iModelCore/BeSQLite/ECDb/: BeRepositoryBasedIdSequence.cpp  ClassMap.cpp  ClassMap.h  ClassMapFactory.cpp  ClassMapInfo.cpp  ClassMapInfo.h  ClassMapSubclasses.cpp  DbColumn.cpp  DbColumn.h  DbTable.cpp  DbTable.h  ECDb.cpp  ECDb.mke  ECDb.vcxproj  ECDb.vcxproj.filters  ECDbClassDependencyAnalyzer.cpp  ECDbInternalTypes.h  ECDbLogger.h  ECDbMap.cpp  ECDbMap.h  ECDbPch.h  ECDbPolicy.mki  ECDbPolicyManager.cpp  ECDbPolicyManager.h  ECDbProfileManager.cpp  ECDbProfileManager.h  ECDbProfileUpgrader.cpp  ECDbProfileUpgrader.h  ECDbSchemaManager.cpp  ECDbSchemaPersistence.cpp  ECDbSchemaPersistence.h  ECDbSchemaReader.cpp  ECDbSchemaReader.h  ECDbSchemaWriter.cpp  ECDbSchemaWriter.h  ECDbStore.cpp  ECDbSystemSchemaHelper.cpp  ECDbUtility.cpp  ECDbUtility.h  ECInstanceFinder.cpp  (+25 more)
iModelCore/BeSQLite/ECSqlConsole/: Console.cpp  Console.h  ConsoleCommand.cpp  ConsoleCommand.h  ECSqlCommand.cpp  ECSqlConsole.cpp  ECSqlConsole.mke  ECSqlStatementIterator.cpp  RandomECInstanceGenerator.cpp  RandomECInstanceGenerator.h
iModelCore/BeSQLite/IModelExtractor/: IModelExtractor.cpp  IModelExtractor.h  IModelExtractor.mke  IModelExtractor.vcxproj  IModelExtractor.vcxproj.filters
iModelCore/BeSQLite/SHA1/: sha1.cpp
iModelCore/BeSQLite/SQLite/: DownloadVfs.cpp  EncryptedDbVfs.cpp  IntVirtualTable.cpp  UPDATE.md  UpdateBlockCacheVFS.bat  UpdateCloudSqlite.bat  UpdateSqlite.bat  bcv_int.h  bcv_socket.h  bcvencrypt.c  bcvencrypt.h  bcvlog.c  bcvmodule.c  bcvmodule.h  bcvutil.c  bcvutil.h  bentley-sqlite.c  blockcachevfs.c  blockcachevfs.h  blockcachevfsd.c  closure.c  see-aes128-ofb.c  shathree.c  shell.c  simplexml.c  sqlite-notice.txt  sqlite3-1.c  sqlite3-2.c  sqlite3-3.c  sqlite3-4.c  sqlite3-5.c  sqlite3-6.c  sqlite3-7.c  sqlite3-all.c  sqlite3.h  sqlite3ext.h  sqlite3session.h  test_sqllog.c  zipvfs.c  zipvfs.h
iModelCore/BeSQLite/Tests/: BeSQLiteUnitTests.vcxproj  BeSQLiteUnitTests.vcxproj.filters  BuildTests.mke  Prewire.mke  ignore_list.txt
iModelCore/BeSQLite/seven/: Lzma2Dec.c  Lzma2Enc.h  Types.h
iModelCore/BeSQLite/snappy/: snappy-notice.txt  snappy-stubs-internal.h  snappy.cpp  snappy.h
iModelCore/Bentley/: AssertBentleyPolicy.mki  Bentley.PartFile.xml  Bentley.cmake.PartFile.xml  Bentley.mke  Bentley.vcxproj  Bentley.vcxproj.filters  BentleyAllocator.mke  BentleyLibTest.cpp  BentleyLibTestDll.mke  BentleyPolicy.mki  BootStrapToolset.mke  CMakeLists.txt  RunBentleyTest.mke  bentley-notice.txt  btree-notice.txt  bvector-notice.txt  prewire.mke
iModelCore/Bentley/BeHttp/: AuthenticationHandler.cpp  BeHttp.mke  BeHttpCompileOptions.mki  BeHttpXliffs.mke  Credentials.cpp  DefaultHttpHandler.cpp  Http.mki  HttpClient.cpp  HttpError.cpp  HttpHeaders.cpp  NetworkIndicator.h  NetworkIndicator.mm  WebLogging.h  l10n-BeHttp.mke  prewire.mke
iModelCore/Bentley/BeJavaScript/: BeJavaScript.PartFile.xml  BeJavaScript.cpp  BeJavaScript.mke  BeJavaScriptTools.mke  JsDebugServer.cpp  JsDebugServer.h  V8InspectorClientProxy.cpp  V8InspectorClientProxy.h  V8InspectorManager.h  google_v8_prewire.mke
iModelCore/Bentley/BeJpeg/: BeJpeg.cpp  BeJpeg.mke
iModelCore/Bentley/BeRapidJson/: BeRapidJson.mke
iModelCore/Bentley/BeXml/: BeXml.cpp  CMakeLists.txt  bexml.mke
iModelCore/Bentley/Bentley/: BeId.cpp  Bentley.vcxproj  Bentley.vcxproj.filters  BentleyInternal.h  CancellationToken.cpp  DateTime.cpp  DateTimeConverter.cpp  DateTimeConverter.h  DirectoryObserver.cpp  GlobalHandleContainer.cpp  Logging.cpp  RefCounted.cpp  WString.cpp  md5.cpp  sha1.cpp
iModelCore/Bentley/PublicAPI/: PublicApi.mke
iModelCore/Bentley/PublicMki/: BentleyApi.mki
iModelCore/Bentley/Tasks/: AsyncError.cpp  AsyncTask.cpp  AsyncTaskRunner.cpp  Tasks.mki  (+7 more)
iModelCore/ECDb/: BeSQLiteEC.NuGetPackage.mke  BeSQLiteEC.nuspec  CHANGES.md  CMakeLists.txt  ChangesetSchema.md  ECDb.PartFile.xml  ECDb.cmake.PartFile.xml  ECDb.prewire.mke  FAILING.md  LiveSync.md  imodel02_merge_readme.md
iModelCore/Units/: CMakeLists.txt  Units.PartFile.xml  Units.PartFile.xml.orig  Units.Prewire.mke  Units.cmake.PartFile.xml  Units.mke  Units.sln  Units.vcxproj  Units.vcxproj.filters  UnitsPCH.cpp  UnitsPCH.h
node-addon-api/: CMakeLists.txt  README.md  napi_stub.cpp  node-addon-api.PartFile.xml  node-addon-api.cmake.PartFile.xml  node-addon-lib.mke  prewire-api.mke  prewire-lib.mke  prewire.mke
node-addon-api/Napi/: napi-inl.h  napi.h  node_api-config.h  node_api_types.h
(+26340 files in other folders)
